# nostr-relay

./: .eslintrc.json  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  GUIDE.md  LICENSE  Launch-Electron-App-Windows.bat  README.md  aggressive-indexer.js  build-and-push.ps1  config.toml  eslint.config.js  package.json  railway.toml  test_indexer.py  vercel.json
api/: _cors.js  _db.js  data.js  discovery.js  engagement.js  events-bulk.js  health.js  health.rs  health.ts  indexer-cron.js  indexer-stats.js  search-events.js  search-suggest.js  search.js  trending.js
db/: README.md  enhanced-migration-manager.js  enhanced-profile-manager.js  index.js  local-index.js  local-migration-manager.js  local-profile-manager.js  local-relationship-manager.js  migrate.js  migration-manager.js  package.json  profile-manager.js  relationship-manager.js  search-manager.js  utils.js
electron/: index.html  main.js  preload.js
examples/: diagnostic_test.py  test_client.py  test_indexer.py
public/: index.html  search-demo.html
scripts/: check-events.js  check-stats.js  compute-and-push-trending.js  dev-api-server.js  enhanced-indexer.js  fast-query-api.js  indexer-backfill-sqlite.js  indexer-backfill-turso.js  indexer-enhanced-sqlite.js  indexer-push-all.js  indexer-push-trending.js  local-index-sqlite.js  local-index.js  migrate-enhanced.js  sqlite-check-stats.js  sqlite-migrate-enhanced.js  sqlite-test-enhanced.js  test-enhanced.js
server/: _cors.js  _db.js
src/: api.rs  config.rs  database.rs  error.rs  events.rs  filters.rs  indexer.rs  lib.rs  main.rs  relay_client.rs  (+5 more)
(+6 files in other folders)
