[package]
name = "nostr-rs-indexer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A NOSTR indexer implementation in Rust"
license = "MIT"
repository = "https://github.com/yourusername/nostr-rs-relay"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
tungstenite = "0.20"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcoin = { version = "0.30", features = ["rand"] }
bech32 = "0.9"
secp256k1 = { version = "0.27", features = ["rand"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
futures-util = "0.3"
tokio-stream = "0.1"
url = "2.4"
warp = "0.3"
